<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_sliders" />

    <LinearLayout
        android:id="@+id/colorSliderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/redLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/redText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <SeekBar
                android:id="@+id/redBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/greenLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/greenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green" />

            <SeekBar
                android:id="@+id/greenBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/blueLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/blueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />

            <SeekBar
                android:id="@+id/blueBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255" />

        </LinearLayout>

    </LinearLayout>

    <!--
     External Citation
     Date:  7 September 2020
     Problem:   Lack of knowledge of Spinner widget.
     Resource:  https://stackoverflow.com/questions/5241660/how-to-add-items-to-a-spinner-in-android
     Solution: I used the example code as a reference.
     -->

    <TextView
        android:id="@+id/hairstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hairstyle" />

    <Spinner
        android:id="@+id/hairstyleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/hairstyleItems"
        android:spinnerMode="dialog" />

    <RadioButton
        android:id="@+id/hairButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hairButton" />

    <RadioButton
        android:id="@+id/faceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faceButton" />

    <RadioButton
        android:id="@+id/eyesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eyesButton" />

    <Button
        android:id="@+id/randomFaceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_face" />

    <SurfaceView
        android:id="@+id/faceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>